3D Stereo rendering with Cycles does not work correctly with Freestyle enabled #45152

Closed
opened 2015-06-22 21:06:21 +02:00 by Michael Kamensky · 12 comments

System Information
Linux Mint 14, NVIDIA GeForce GTX 970

Blender Version
Broken: 2.75 RC 2
Worked: N/A

Short description of error
When rendering a stereo image with Freestyle enabled, the Freestyle lines only appear in the right view, but not in the left view of the stereo pair.

Exact steps for others to reproduce the error
The attached file demonstrates the error: load the .blend file into Blender v2.75rc2 and press F12 to render. Inspect the individual views of the render result, the right view will correctly have the Freestyle lines while the left view will have no Freestyle lines.freestyle_and_3d_views_issue.blend

**System Information** Linux Mint 14, NVIDIA GeForce GTX 970 **Blender Version** Broken: 2.75 RC 2 Worked: N/A **Short description of error** When rendering a stereo image with Freestyle enabled, the Freestyle lines only appear in the right view, but not in the left view of the stereo pair. **Exact steps for others to reproduce the error** The attached file demonstrates the error: load the .blend file into Blender v2.75rc2 and press F12 to render. Inspect the individual views of the render result, the right view will correctly have the Freestyle lines while the left view will have no Freestyle lines.[freestyle_and_3d_views_issue.blend](https://archive.blender.org/developer/F196664/freestyle_and_3d_views_issue.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MichaelKamensky

Added subscriber: @MichaelKamensky

#46096 was marked as duplicate of this issue

#46096 was marked as duplicate of this issue
Member

Added subscribers: @dfelinto, @LukasTonne

Added subscribers: @dfelinto, @LukasTonne
Dalai Felinto was assigned by Lukas Tönne 2015-06-23 11:42:18 +02:00
Member

@dfelinto: could you have a look please?

@dfelinto: could you have a look please?
Member

Added subscribers: @Blendify, @kjym3

Added subscribers: @Blendify, @kjym3

It's working for Blender Internal, but not for Cycles. It's strange because I'm under the impression it was working before. Maybe it's related to d9b43081b6

It's working for Blender Internal, but not for Cycles. It's strange because I'm under the impression it was working before. Maybe it's related to d9b43081b6
Bastien Montagne changed title from 3D Stereo rendering does not work correctly with Freestyle enabled to 3D Stereo rendering with Cycles does not work correctly with Freestyle enabled 2015-06-23 17:12:37 +02:00
Member

any news here?

any news here?

Added subscriber: @brianalvarez

Added subscriber: @brianalvarez

This issue was referenced by df1a3b0fda

This issue was referenced by df1a3b0fda48df9ff7f616b96fb125c7a6ab5811

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Many thanks for the fix Brecht!

Many thanks for the fix Brecht!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45152
No description provided.