Fix T45152: multiview/stereo render not working with Freestyle + Cycles.